# roco-kingdom-world-pet-warehouse

./: .gitignore  .gitmodules  README.md  REASONIX.md  main.py  pyproject.toml  test_wiki.py
backend/: main.py
docs/: api_documentation.md  breed_logic.md  c.html  egg.json  n.md
frontend/: app.js  breeding.html  breeding.js  index.html  style.css
scripts/: api_client.py  fetcher.py  sync_conf.sh
